# myborg.640.bch-vjot

./: bch-vjot
.insitu/: activate
junk/: bch.vjot.vi.beep4stamp  beep4stamp
lbin/: bch.vjot.anydepo.find  bch.vjot.beep4stamp  bch.vjot.playfile  bch.vjot.test-vi
vjot.tools/: pyproject.toml
