[tool.poetry]
name = "vjot.tools"
version = "0.1.0"
description = ""
authors = ["Bryan Hann <nobody@nowhere>"]

[tool.poetry.dependencies]
python = "^3.7"
mutagen = "^1.45.1"
mutagen-helper = "^2.0.0"
pytest-mutagen = "^1.3"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
